# ultimate-transcripter

./: .gitignore  AGENTS.md  LICENSE  pyproject.toml
packaging/appimage/: build-appimage.sh
packaging/flatpak/: io.github.seolcu.UltimateTranscripter.desktop  io.github.seolcu.UltimateTranscripter.flathub.yaml  io.github.seolcu.UltimateTranscripter.metainfo.xml  io.github.seolcu.UltimateTranscripter.yaml
src/ultimate_transcripter/: __init__.py  __main__.py  audio.py  cli.py  gui.py  pipeline.py  provider_assemblyai.py  provider_openai.py  types.py
