[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate-transcripter"
version = "0.1.0"
description = "Quality-first BYOK CLI for large audio transcription"
readme = "AGENTS.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
]

[project.scripts]
ultimate-transcripter = "ultimate_transcripter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
